Roughly fixed overflow

--- a/client/templates/index/index.css.styl
+++ b/client/templates/index/index.css.styl
@@ -9,13 +9,17 @@ form
 
 .input-group
   position: absolute;
+  overflow hidden
 
 .real.input-group
   input
     background none transparent
+  .input-group-btn
+    z-index 100 
 
 .placeholder
   color #999999
+  white-space nowrap
 
 .simplebox, .simplebox:focus
   border: 1px solid #ccc;
